<resources>
    <string name="app_name">Science Workshop Survey</string>
    <string name="action_settings">Settings</string>
    <string name="hint_word">Word…</string>
    <string name="button_save">Save</string>
    <string name="empty_not_saved">Survey not saved because it is empty.</string>
    <string name="add_survey">Add survey</string>
    <string name="add_item" />
    <string name="current_question_text">Question</string>
    <string name="next">Next</string>
    <string name="back">Back</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="start_survey">Start Survey</string>
    <string name="edit_questions">Edit Questions</string>
    <string name="done">Done</string>
    <string name="title_activity_edit_question">EditQuestion</string>
    <string name="saved_prefs_location">com.example.evirn_sci_survey.SharedPref</string>
    <string name="saved_active_survey_key">com.example.evirn_sci_survey.SharedPref.ActiveSurvey</string>
    <string name="saved_logged_in_key">com.example.evirn_sci_survey.SharedPref.LoggedInKey</string>
    <string name="enter_project_name">Enter Project Name</string>
    <string name="enter_first_name">Enter First Name</string>
    <string name="Main_Page_Button" />
    <string name="string_main_page_button"> Next </string>
    <string name="todo">TODO</string>
    <string name="often">How often do you come?</string>
    <string name="students_current_grade">What grade are you in?</string>
    <string name="transportation">How did you arrive to the workshop?</string>
    <string name="tool_page_editT">What tools did you use?</string>
    <string name="togglebutton">ToggleButton</string>
    <string name="Scssors">Scissors</string>
    <string name="Tape">Tape</string>
    <string name="Pen">Pen </string>
    <string name="Screw_Driver">Screw Driver</string>
    <string name="com.example.evirn_sci_survey.Enjoyment_level">On a scale from 0 to 5
        <br />how much  did you enjoy the project</string>
    <string name="Zero">0</string>
    <string name="status">Bad : 0</string>
    <string name="cam_finish">Take Picture</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="question_text">Question Text</string>
    <string name="cancel">Cancel</string>
    <string name="save_changes">Save Changes</string>
    <string name="newQuestion">New Question</string>
    <string name="select_survey">Select Survey</string>
    <string name="survey_list">Survey List</string>
    <string name="survey_description">Survey Description</string>
    <string name="survey_end">Survey End</string>
    <string name="survey_start">Survey Start</string>
    <string name="set_as_active">Set As Active</string>
    <string name="is_active">Is Active</string>
    <string name="answers">Answers</string>
    <string name="add_answer">Add Answer</string>
    <string name="view_results">View Results</string>
    <string name="logout">Logout</string>
    <string name="is_checkbox">Is Checkbox</string>
    <string name="restart">Restart</string>
    <string name="min">Min</string>
    <string name="minLbl">Min:</string>
    <string name="max">Max</string>
    <string name="maxLbl">Max:</string>
    <string name="export_results">Export Results</string>
    <string name="loginButtonText">Login</string>
    <string name="passwordEditText">Password</string>
    <string name="usernameEditText">Username</string>
    <string name="admin_button_text">Admin</string>

    <string-array name="question_types">
        <item>Textbox</item>
        <item>Checkbox</item>
        <item>Slider</item>
    </string-array>
</resources>