<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#889FE3"
    android:gravity="center">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tool_page_question"
            android:layout_width="392dp"
            android:layout_height="156dp"
            android:gravity="center"
            android:scrollHorizontally="false"
            android:text="@string/com.example.evirn_sci_survey.Enjoyment_level"

            android:textSize="23dp" />

        <TextView
            android:id="@+id/number_string"
            android:layout_width="185dp"
            android:layout_height="60dp"
            android:layout_marginTop="60dp"
            android:paddingLeft="30dp"
            android:text="@string/status"
            android:textAlignment="center"
            android:textSize="20dp" />

        <SeekBar
            android:id="@+id/seekBar_0_5"
            android:layout_width="298dp"
            android:layout_height="52dp"
            android:layout_marginTop="0dp"
            android:max="5" />

        <Button
            android:id="@+id/Enjoyment_button"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_row="5"
            android:layout_column="9"
            android:layout_marginStart="92dp"
            android:layout_marginTop="92dp"
            android:layout_marginEnd="92dp"
            android:background="#DADA34"
            android:text="@string/string_main_page_button"
            android:textAlignment="center"
            android:textColor="#FFFFFF" />

        <Button
            android:id="@+id/backBtnEnjoy"
            android:layout_width="133dp"
            android:layout_height="wrap_content"
            android:text="@string/back" />


    </LinearLayout>

</RelativeLayout>